tests/compile_fail/conflicting_help.stderr
error: `no_short and no_long` and `help` are conflicting attributes
 --> $DIR/conflicting_help.rs:9:9
  |
9 |     pub value: bool,
  |         ^^^^^
